--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,7 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= data.page.title || "Godfucker!" %></title>
     
+    <script src="http://js.pusher.com/2.0/pusher.min.js"></script>
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
   </head>
